public interface View
{
	public void display();
}